Fix contact link in footer

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </ul>
   <hr />
   <footer>
-    <a href="public/contact.html"> contact me</a>
+    <a href="contact.html"> contact me</a>
   </footer>
 </body>
 
